--- a/src/css/wrapper/index.scss
+++ b/src/css/wrapper/index.scss
@@ -12,6 +12,9 @@
   display: inline-block;
   width: 100%;
 }
+.photo img {
+  width: 100%;
+}
 h1.page-title {
   margin-top: 0;
   margin-bottom: 0.5em;
