[ADD]Title image tiles paragraph [UPDATE]theme

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -175,4 +175,5 @@ hr {
 @import "table/index";
 @import "status-table/index";
 @import "footer/index";
-@import "wrapper/index"
+@import "wrapper/index";
+@import "consent-checkbox/index"
