--- a/src/css/subscribe-block/index.scss
+++ b/src/css/subscribe-block/index.scss
@@ -210,7 +210,8 @@
 }
 .subscribe-block__form {
   display: flex;
-  width: 75%;
+  width: 80%;
+  flex-flow: wrap;
   padding-top: 2rem;
   margin-right: auto;
   margin-left: auto;
